@@ -193,7 +193,8 @@ typedef enum FILETYPE
     FILETYPE_JPG,
     FILETYPE_BMP,
     FILETYPE_TS,
-    FILETYPE_HLS
+    FILETYPE_HLS,
+    FILETYPE_FLAC
 } FILETYPE;
 
 /**
